# arrow-ipc-uds-demo

./: Cargo.toml  README.md
src/: client.rs  server.rs
src/api/: Cargo.toml  build.rs
src/api/proto/: shm.proto
